--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>웹카페</title>
+  <!-- 웹폰트 먼저 요청해야하기 때문에 먼저 선언 -->
+  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
+  <link rel="stylesheet" href="./styles/style.css" /> 
 </head>
 <body>
 <header class="header">헤더</header>
@@ -21,6 +24,6 @@
     푸터
   </div>
 </footer>
-
+<!--  div로 나눈 이유: footer 영역 안에 글자들을 배치할 때 쓰려고 -->
 </body>
 </html>
