텍스트 링크 모음 마크업

--- a/index.html
+++ b/index.html
@@ -12,12 +12,21 @@
 </head>
 <body>
 <header class="header">
+  <!-- 로고 Start -->
   <h1 class="logo">
     <a href="./index-complete.html">
-    <img src="./assets/logo.png" alt="">
+    <img src="./assets/logo.png" alt="web cafe" width="165" height="35">
   </a>
-  </h1>
-
+</h1>
+<!-- 로고 end -->
+<!-- ul.member>li*5>span[aria-hidden="true"]{:}+a[href="/"] -->
+<ul class="member">
+  <li><a href="/"></a>홈</li>
+  <li><span aria-hidden="true">:</span><a href="/"></a>로그인</li>
+  <li><span aria-hidden="true">:</span><a href="/"></a>회원가입</li>
+  <li><span aria-hidden="true">:</span><a href="/"></a>사이트맵</li>
+  <li><span aria-hidden="true">:</span><a href="/"></a>english</li>
+</ul>
 </header>
 <div class="visual">비주얼</div>
 <main class="main">
