텍스트 링크 모음 일부 디자인+html divider 수정

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <!-- 로고 end -->
 <!-- ul.member>li*5>span[aria-hidden="true"]{:}+a[href="/"] -->
 <ul class="member">
-  <li><a href="/"></a>홈</li>
-  <li><span aria-hidden="true">:</span><a href="/"></a>로그인</li>
-  <li><span aria-hidden="true">:</span><a href="/"></a>회원가입</li>
-  <li><span aria-hidden="true">:</span><a href="/"></a>사이트맵</li>
-  <li><span aria-hidden="true">:</span><a href="/"></a>english</li>
+  <li><a href="/">홈</a></li>
+  <li><span class="divider" aria-hidden="true">:</span><a href="/">로그인</a></li>
+  <li><span class="divider" aria-hidden="true">:</span><a href="/">회원가입</a></li>
+  <li><span class="divider" aria-hidden="true">:</span><a href="/">사이트맵</a></li>
+  <li><span class="divider" aria-hidden="true">:</span><a href="/">english</a></li>
 </ul>
 </header>
 <div class="visual">비주얼</div>
