제이쿼리 대신 바닐라 스크립트 적용

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <!-- 웹폰트 먼저 요청해야하기 때문에 먼저 선언 -->
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
   <link rel="stylesheet" href="./styles/style.css" /> 
+
+  <!-- ready() 메소드가 defer 역할을 한다고 생각 -->
+  <!-- <script src="./js/jquery.min.js"></script>
+  <script src="./js/menu-tab.js"></script> -->
+  <script src="./js/main.js" defer></script>
 </head>
 <body>
 <header class="header">
@@ -146,5 +151,7 @@
   </div>
 </footer>
 <!--  div로 나눈 이유: footer 영역 안에 글자들을 배치할 때 쓰려고 -->
+
+
 </body>
 </html>
