--- a/index.html
+++ b/index.html
@@ -138,15 +138,39 @@
 </nav>
 </header>
 <div class="visual">
+  <!-- before -->
   <div class="visual-text">
     Web Standards &amp; Accessibility
   </div>
+  <!-- after -->
 </div>
 <main class="main">
-  <div class="group group1">그룹1</div>
+  <div class="group group1">
+    <section class="login">
+      <h2 class="login-title">로그인</h2>
+      <form method="POST" action="https://formspree.io/seulbinim@gmail.com">
+        <!-- fieldset,legend는 그룹화,그룹의 목적을 알려주려고,생략 가능 -->
+        <fieldset>
+        <legend>회원 로그인 폼</legend>
+        <div class="user-email">
+          <label for="userEmail">아이디</label> <!--label : input을 설명하고 연결하는 것/name:서버에서 이름을 구분하기 위함 -->
+          <input type="email" id="userEmail" name="userEmail" placeholder="fe@euid.dev" required/>
+        </div> 
+        <div class="user-pw">
+          <label for="userPw">비밀번호</label>
+          <input type="password" id="userPw" name="userPw" placeholder="8자리 이상" required/>
+        </div>
+        <button type="submit" class="login-button">로그인</button>
+      </fieldset>
+    </form>
+      <ul class="sign">
+        <li><a href="/">회원가입</a></li>
+        <li><a href="/">아이디/비밀번호찾기</a></li>
+      </ul>
+    </section>
+  </div>
   <div class="group group2">그룹2</div>
   <div class="group group3">그룹3</div>
-  <!-- <div class="clearfix"></div> -->
 </main>
 <article class="slogan">슬로건</article>
 <footer class="footer">
