로그인 배경 및 영역 지정,로그인폼 배치 지정

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
   <div class="group group1">
     <section class="login">
       <h2 class="login-title">로그인</h2>
-      <form method="POST" action="https://formspree.io/seulbinim@gmail.com">
+      <form method="POST" action="https://formspree.io/seulbinim@gmail.com"
+      class="login-form">
         <!-- fieldset,legend는 그룹화,그룹의 목적을 알려주려고,생략 가능 -->
         <fieldset>
         <legend>회원 로그인 폼</legend>
