새소식 마크업+탭메뉴컨트롤동작코드(is-select)

--- a/practice.html
+++ b/practice.html
@@ -13,5 +13,8 @@
 <div class="box" id="two">Two</div>
 <div class="box" id="three">Three</div>
 <div class="box" id="four">Four</div>
+<footer>안녀아세용</footer>
+<header>반가워용</header>
+<h1>나는 장서현</h1>
 </body>
 </html>
