--- a/practice.html
+++ b/practice.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html lang="ko-KR"> 
+<html lang="ko-KR">
 <!--언어-국가코드-->
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>연습</title>
-  <link rel="stylesheet" href="./practice.css" /> 
+  <link rel="stylesheet" href="./practice.css" />
 </head>
+
 <body>
-<div class="box" id="one">One</div>
-<div class="box" id="two">Two</div>
-<div class="box" id="three">Three</div>
-<div class="box" id="four">Four</div>
-<footer>안녀아세용</footer>
-<header>반가워용</header>
-<h1>나는 장서현</h1>
+  <div class="box-container">
+    <div class="box" id="one">AAAA</div>
+    <div class="box" id="two">BBBB</div>
+    <div class="box" id="three">CCCC</div>
+    <div class="box" id="four">DDDD</div>
+  </div>
 </body>
+
 </html>
